--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: St Anthonys Primary School
 url: https://stanthonyspri-moe-edu-sg-admin.cwp.sg
-favicon: /images/favicon-isomer.ico
+favicon: /images/Homepage/logo.png
 colors:
   primary-color: "#e21414"
   secondary-color: "#ebda08"
