--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,3 +2,5 @@ logo: /images/Homepage/logo.png
 links:
   - title: About Us
     collection: about-us
+  - title: Useful Links
+    collection: useful-links
