--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,4 +2,5 @@ collections:
   useful-links:
     output: true
     order:
+      - Student Learning Space & Google Icon.md
       - Parents Gateway.md
