--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   useful-links:
     output: true
     order:
+      - School Supplies and Bus Services.md
       - Parents Gateway.md
       - Student Learning Space & Google Icon.md
       - Student Care Centre@SAPS.md
