--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,8 @@ logo: /images/Homepage/logo.png
 links:
   - title: About Us
     collection: about-us
+  - title: The Anthonian Experience
+    collection: the-anthonian-experience
   - title: Our Anthonian Family
     collection: our-anthonian-family
   - title: Useful Links
