--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,5 +2,6 @@ collections:
   about-us:
     output: true
     order:
+      - School Rules.md
       - School Philosophy.md
       - The Lasallian Family.md
