--- a/_our-anthonian-family/collection.yml
+++ b/_our-anthonian-family/collection.yml
@@ -2,5 +2,6 @@ collections:
   our-anthonian-family:
     output: true
     order:
+      - Parents Support Group.md
       - Anthonian Staff.md
       - Board Members.md
