--- a/_the-anthonian-experience/collection.yml
+++ b/_the-anthonian-experience/collection.yml
@@ -2,4 +2,5 @@ collections:
   the-anthonian-experience:
     output: true
     order:
+      - Curriculum@SAPS/English.md
       - Curriculum@SAPS/.keep
