--- a/_the-anthonian-experience/collection.yml
+++ b/_the-anthonian-experience/collection.yml
@@ -2,5 +2,6 @@ collections:
   the-anthonian-experience:
     output: true
     order:
+      - Curriculum@SAPS/Aesthetics.md
       - Curriculum@SAPS/English.md
       - Curriculum@SAPS/.keep
