--- a/_the-anthonian-experience/collection.yml
+++ b/_the-anthonian-experience/collection.yml
@@ -2,6 +2,7 @@ collections:
   the-anthonian-experience:
     output: true
     order:
+      - Curriculum@SAPS/Character and Citizenship Education.md
       - Curriculum@SAPS/Aesthetics.md
       - Curriculum@SAPS/English.md
       - Curriculum@SAPS/.keep
