--- a/_the-anthonian-experience/collection.yml
+++ b/_the-anthonian-experience/collection.yml
@@ -8,4 +8,4 @@ collections:
       - Curriculum@SAPS/Education Technology.md
       - Curriculum@SAPS/English.md
       - Curriculum@SAPS/Mathematics.md
-      - Curriculum@SAPS/Mother Tongue.md
+      - Curriculum@SAPS/Chinese Language.md
