--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - School Information.md
       - School Philosophy.md
       - The Lasallian Family.md
       - School Rules.md
