--- a/_the-anthonian-experience/collection.yml
+++ b/_the-anthonian-experience/collection.yml
@@ -2,6 +2,7 @@ collections:
   the-anthonian-experience:
     output: true
     order:
+      - Clubs & Societies/Environmental Science.md
       - Clubs & Societies/.keep
       - Clubs & Societies/English Club.md
       - Clubs & Societies/InfoComm Club.md
