--- a/_the-anthonian-experience/collection.yml
+++ b/_the-anthonian-experience/collection.yml
@@ -38,6 +38,6 @@ collections:
       - Clubs & Societies/InfoComm Club.md
       - Clubs & Societies/Robotics Club.md
       - Clubs & Societies/Environmental Science.md
-      - Uniformed Group/.keep
+      - Uniformed Groups/.keep
       - ALP@SAPS.md
       - LLP@SAPS.md
