--- a/_the-anthonian-experience/collection.yml
+++ b/_the-anthonian-experience/collection.yml
@@ -38,6 +38,7 @@ collections:
       - Clubs & Societies/InfoComm Club.md
       - Clubs & Societies/Robotics Club.md
       - Clubs & Societies/Environmental Science.md
+      - Uniformed Groups/Brownies.md
       - Uniformed Groups/Scouts.md
       - Uniformed Groups/.keep
       - ALP@SAPS.md
