--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   useful-links:
     output: true
     order:
+      - Annoucements & Highlights/Announcement For Former Anthonians.md
       - Annoucements & Highlights/.keep
       - Annoucements & Highlights/National Day.md
       - Annoucements & Highlights/Racial Harmony Day(RHD).md
