--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -7,7 +7,7 @@ collections:
       - Annoucements & Highlights/Racial Harmony Day(RHD).md
       - Annoucements & Highlights/Founder's Day.md
       - Annoucements & Highlights/Announcement For Former Anthonians.md
-      - Annoucements & Highlights/Chinese New Year.md
+      - Annoucements & Highlights/Chinese New Year Celebration 2022.md
       - Parents Gateway.md
       - Student Learning Space & Google Icon.md
       - Student Care Centre@SAPS.md
