--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,6 +2,8 @@ collections:
   useful-links:
     output: true
     order:
+      - Annoucements & Highlights/P1 BACK TO SCHOOL (BTS) PROGRAMME (4 to 6 Jan
+        2022).md
       - Annoucements & Highlights/.keep
       - Annoucements & Highlights/National Day.md
       - Annoucements & Highlights/Racial Harmony Day(RHD).md
