--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -10,7 +10,8 @@ collections:
       - Annoucements & Highlights/Chinese New Year Celebration 2022.md
       - Annoucements & Highlights/P1 BACK TO SCHOOL (BTS) PROGRAMME (4 to 6 Jan
         2022).md
-      - Annoucements & Highlights/ALP Coding Program for P3 Students.md
+      - Annoucements & Highlights/ALP Coding Program for P3 Students For P4
+        Students.md
       - Annoucements & Highlights/ALP Coding Program.md
       - Parents Gateway.md
       - Student Learning Space & Google Icon.md
