--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -11,7 +11,7 @@ collections:
       - Annoucements & Highlights/P1 BACK TO SCHOOL (BTS) PROGRAMME (4 to 6 Jan
         2022).md
       - Annoucements & Highlights/ALP Coding Program for P3 Students.md
-      - Annoucements & Highlights/ALP Coding Program.md
+      - Annoucements & Highlights/ALP Coding Program For P4 Students.md
       - Parents Gateway.md
       - Student Learning Space & Google Icon.md
       - Student Care Centre@SAPS.md
