--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -12,7 +12,7 @@ collections:
         2022).md
       - Annoucements & Highlights/ALP Coding Program for P3 Students.md
       - Annoucements & Highlights/ALP Coding Program For P4 Students.md
-      - Annoucements & Highlights/ALP Coding Program for P5.md
+      - Annoucements & Highlights/ALP Coding Program for P5 Students.md
       - Parents Gateway.md
       - Student Learning Space & Google Icon.md
       - Student Care Centre@SAPS.md
