--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: St Anthonys Primary School
+title: St. Anthony's Primary School
 url: https://stanthonyspri-moe-edu-sg-admin.cwp.sg
 favicon: /images/Homepage/logo.png
 colors:
@@ -15,7 +15,7 @@ colors:
       color: "#00838f"
     - title: media-color-five
       color: "#00838f"
-description: An Isomer site of the Singapore Government
+description: ""
 permalink: none
 baseurl: ""
 exclude:
