--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,11 @@ title: St. Anthony's Primary School
 url: https://stanthonyspri-moe-edu-sg-admin.cwp.sg
 favicon: /images/Homepage/logo.png
 colors:
-  primary-color: "#e21414"
-  secondary-color: "#4a90e2"
+  primary-color: "#024c45"
+  secondary-color: "#924f00"
   media-colors:
     - title: media-color-one
-      color: "#4a9108"
+      color: "#f3d5a3"
     - title: media-color-two
       color: "#744d9f"
     - title: media-color-three
