--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: St. Anthony's Primary School
 url: https://stanthonyspri-moe-edu-sg-admin.cwp.sg
 favicon: /images/Homepage/logo.png
 colors:
-  primary-color: "#024c45"
-  secondary-color: "#924f00"
+  primary-color: "#924f00"
+  secondary-color: "#024c45"
   media-colors:
     - title: media-color-one
       color: "#f3d5a3"
