--- a/_the-anthonian-experience/collection.yml
+++ b/_the-anthonian-experience/collection.yml
@@ -8,7 +8,7 @@ collections:
       - Curriculum@SAPS/Education Technology.md
       - Curriculum@SAPS/English.md
       - Curriculum@SAPS/Mathematics.md
-      - Curriculum@SAPS/Mother Tounge Department.md
+      - Curriculum@SAPS/Mother Tongue Department.md
       - Curriculum@SAPS/Chinese Language.md
       - Curriculum@SAPS/Tamil Language.md
       - Curriculum@SAPS/Malay Language.md
