--- a/_mother-tongue-department/collection.yml
+++ b/_mother-tongue-department/collection.yml
@@ -2,5 +2,6 @@ collections:
   mother-tongue-department:
     output: true
     order:
+      - Tamil Language.md
       - Malay Language.md
       - Chinese Language.md
