--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ colors:
     - title: media-color-one
       color: "#f3d5a3"
     - title: media-color-two
-      color: "#924f00"
+      color: "#00838f"
     - title: media-color-three
       color: "#00838f"
     - title: media-color-four
