--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   useful-links:
     output: true
     order:
+      - Highlights/.keep
       - Announcements/.keep
       - Annoucements & Highlights/.keep
       - Annoucements & Highlights/Racial Harmony Day(RHD).md
