--- a/_2021-highlights/collection.yml
+++ b/_2021-highlights/collection.yml
@@ -2,6 +2,7 @@ collections:
   2021-highlights:
     output: true
     order:
+      - ALP Coding Program for P3 Students.md
       - P1 BACK TO SCHOOL (BTS) PROGRAMME (4 to 6 Jan 2022).md
       - Chinese New Year Celebration 2022.md
       - Announcement For Former Anthonians.md
