--- a/_2021-highlights/collection.yml
+++ b/_2021-highlights/collection.yml
@@ -2,6 +2,7 @@ collections:
   2021-highlights:
     output: true
     order:
+      - ALP Coding Program for P5 Students.md
       - Teachers Day 2022.md
       - ALP Coding Program For P4 Students.md
       - ALP Coding Program for P3 Students.md
