--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   useful-links:
     output: true
     order:
+      - Highlights/test.md
       - Highlights/.keep
       - Announcements/.keep
       - Parents Gateway.md
