--- a/_archived-2022-highlights/collection.yml
+++ b/_archived-2022-highlights/collection.yml
@@ -1,5 +1,5 @@
 collections:
-  2022-highlights:
+  archived-2022-highlights:
     output: true
     order:
       - ALP Coding Program for P5 Students.md
