--- a/_the-anthonian-experience/collection.yml
+++ b/_the-anthonian-experience/collection.yml
@@ -20,6 +20,7 @@ collections:
       - CCA@SAPS/CCA@SAPS.md
       - CCA@SAPS/CCA Schedule.md
       - CCA@SAPS/CCA Policy.md
+      - Sports & Games/Tchoukball.md
       - Sports & Games/.keep
       - Sports & Games/Football.md
       - Sports & Games/Badminton.md
