--- a/_sports-and-games/collection.yml
+++ b/_sports-and-games/collection.yml
@@ -2,6 +2,7 @@ collections:
   sports-and-games:
     output: true
     order:
+      - Badminton.md
       - Sports Club.md
       - Floorball.md
       - Tchoukball.md
