--- a/_the-anthonian-experience/collection.yml
+++ b/_the-anthonian-experience/collection.yml
@@ -14,6 +14,7 @@ collections:
       - Curriculum@SAPS/Pupils Discipline & Leadership.md
       - Curriculum@SAPS/Science.md
       - Curriculum@SAPS/Student Development.md
+      - CCA@SAPS/Visual & Performing Arts.md
       - CCA@SAPS/Sports & Games.md
       - CCA@SAPS/.keep
       - CCA@SAPS/Awards & Recognition.md
