--- a/_cca-visual-and-performing-arts/collection.yml
+++ b/_cca-visual-and-performing-arts/collection.yml
@@ -2,5 +2,6 @@ collections:
   cca-visual-and-performing-arts:
     output: true
     order:
+      - Chinese Dance.md
       - Comtemporary Dance.md
       - Visual Arts.md
