--- a/_cca-visual-and-performing-arts/collection.yml
+++ b/_cca-visual-and-performing-arts/collection.yml
@@ -2,6 +2,7 @@ collections:
   cca-visual-and-performing-arts:
     output: true
     order:
+      - Choir.md
       - Brass Band.md
       - Chinese Dance.md
       - Comtemporary Dance.md
