--- a/_cca-visual-and-performing-arts/collection.yml
+++ b/_cca-visual-and-performing-arts/collection.yml
@@ -5,5 +5,5 @@ collections:
       - Choir.md
       - Brass Band.md
       - Chinese Dance.md
-      - Comtemporary Dance.md
+      - Contemporary Dance.md
       - Visual Arts.md
