--- a/_cca-clubs-and-societies/collection.yml
+++ b/_cca-clubs-and-societies/collection.yml
@@ -2,5 +2,6 @@ collections:
   cca-clubs-and-societies:
     output: true
     order:
+      - InfoComm Club.md
       - Robotics Club.md
       - Environmental Science.md
