--- a/_cca-clubs-and-societies/collection.yml
+++ b/_cca-clubs-and-societies/collection.yml
@@ -2,6 +2,7 @@ collections:
   cca-clubs-and-societies:
     output: true
     order:
+      - English Club.md
       - InfoComm Club.md
       - Robotics Club.md
       - Environmental Science.md
