--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@ colors:
     - title: media-color-one
       color: "#f3d5a3"
     - title: media-color-two
-      color: "#00838f"
+      color: "#024c45"
     - title: media-color-three
-      color: "#00838f"
+      color: "#024c45"
     - title: media-color-four
       color: "#00838f"
     - title: media-color-five
