--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ colors:
     - title: media-color-two
       color: "#024c45"
     - title: media-color-three
-      color: "#024c45"
+      color: "#f3d5a3"
     - title: media-color-four
       color: "#00838f"
     - title: media-color-five
