--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ colors:
     - title: media-color-two
       color: "#024c45"
     - title: media-color-three
-      color: "#f3d5a3"
+      color: "#024c45"
     - title: media-color-four
-      color: "#00838f"
+      color: "#024c45"
     - title: media-color-five
-      color: "#00838f"
+      color: "#f3d5a3"
 description: ""
 permalink: none
 baseurl: ""
