--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ colors:
     - title: media-color-four
       color: "#024c45"
     - title: media-color-five
-      color: "#f3d5a3"
+      color: "#024c45"
 description: ""
 permalink: none
 baseurl: ""
