--- a/_the-anthonian-experience/collection.yml
+++ b/_the-anthonian-experience/collection.yml
@@ -14,6 +14,7 @@ collections:
       - Curriculum@SAPS/Pupils Discipline & Leadership.md
       - Curriculum@SAPS/Science.md
       - Curriculum@SAPS/Student Development.md
+      - CCA@SAPS/DSA (Direct School Admission).md
       - CCA@SAPS/.keep
       - CCA@SAPS/CCA@SAPS.md
       - CCA@SAPS/Sports & Games.md
