--- a/_the-anthonian-experience/collection.yml
+++ b/_the-anthonian-experience/collection.yml
@@ -23,6 +23,6 @@ collections:
       - CCA@SAPS/Awards & Recognition.md
       - CCA@SAPS/CCA Schedule.md
       - CCA@SAPS/CCA Policy.md
-      - CCA@SAPS/DSA (Direct School Admission).md
+      - CCA@SAPS/Direct School Admission DSA Secondary.md
       - ALP@SAPS.md
       - LLP@SAPS.md
