--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,3 +8,5 @@ links:
     collection: our-anthonian-family
   - title: Useful Links
     collection: useful-links
+  - title: FACEBOOK
+    url: /facebook
