--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,7 +2,7 @@ collections:
   useful-links:
     output: true
     order:
-      - Online Forms FAS and Wait List.md
+      - Financial Assistance Scheme (FAS).md
       - Parents Gateway.md
       - Student Learning Space & Google Icon.md
       - Student Care Centre@SAPS.md
