--- a/_the-anthonian-experience/collection.yml
+++ b/_the-anthonian-experience/collection.yml
@@ -9,7 +9,7 @@ collections:
       - Curriculum@SAPS/Education Technology.md
       - Curriculum@SAPS/English.md
       - Curriculum@SAPS/Mathematics.md
-      - Curriculum@SAPS/Mother Tongue Department.md
+      - Curriculum@SAPS/Mother Tongue.md
       - Curriculum@SAPS/Physical and Sports Education.md
       - Curriculum@SAPS/Pupils Discipline & Leadership.md
       - Curriculum@SAPS/Science.md
