{"message":"Update file: collection.yml","userId":"1172","fileName":"collection.yml"}

--- a/_the-anthonian-experience/collection.yml
+++ b/_the-anthonian-experience/collection.yml
@@ -3,6 +3,7 @@ collections:
     output: true
     order:
       - Overview.md
+      - Curriculum@SAPS/Environmental Education.md
       - Curriculum@SAPS/.keep
       - Curriculum@SAPS/Aesthetics.md
       - Curriculum@SAPS/Character and Citizenship Education.md
