{"message":"Update file: collection.yml","userId":"1172","fileName":"collection.yml"}

--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -5,7 +5,7 @@ collections:
       - School Wait List.md
       - Financial Assistance Scheme (FAS).md
       - Parents Gateway.md
-      - Student Learning Space & Google Icon.md
+      - Student Learning Space & Student MIMS account.md
       - Student Care Centre@SAPS.md
       - School Supplies and Bus Services.md
       - Dental Service.md
