--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   useful-links:
     output: true
     order:
+      - For Parents.md
       - School Wait List.md
       - Financial Assistance Scheme (FAS).md
       - Parents Gateway.md
