--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   useful-links:
     output: true
     order:
+      - For Parents/Student Care Centre@SAPS.md
       - For Parents/Parents Gateway.md
       - For Parents/.keep
       - School Wait List.md
