--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   useful-links:
     output: true
     order:
+      - For Students/Student Learning Space & Student MIMS account.md
       - For Students/.keep
       - For Parents/School Supplies and Bus Services.md
       - For Parents/Dental Service.md
