--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   useful-links:
     output: true
     order:
+      - Others/Financial Assistance Scheme (FAS).md
       - Others/School Wait List.md
       - Others/.keep
       - For Students/Student Learning Space & Student MIMS account.md
