{"message":"Update file: collection.yml","userId":"1194","fileName":"collection.yml"}

--- a/_useful-links/collection.yml
+++ b/_useful-links/collection.yml
@@ -2,6 +2,7 @@ collections:
   useful-links:
     output: true
     order:
+      - Others/LOA Application.md
       - Others/Financial Assistance Scheme (FAS).md
       - Others/School Wait List.md
       - Others/.keep
