--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -8,4 +8,4 @@ collections:
       - School Information.md
       - School Identity.md
       - Principal's Message.md
-      - Anthonian Productions.md
+      - Flight Of The Phoenix Productions.md
