{"message":"Update file: collection.yml","userId":"1172","fileName":"collection.yml"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -8,4 +8,4 @@ collections:
       - School Information.md
       - School Identity.md
       - Principal's Message.md
-      - Flight Of The Phoenix Productions.md
+      - Anthonian Productions.md
