{"message":"Update file: collection.yml","userId":"1194","fileName":"collection.yml"}

--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -2,6 +2,7 @@ collections:
   about-us:
     output: true
     order:
+      - SAPS 145th Anniversary Events & Updates.md
       - School Philosophy.md
       - The Lasallian Family.md
       - School Rules.md
