--- a/_about-us/collection.yml
+++ b/_about-us/collection.yml
@@ -3,7 +3,7 @@ collections:
     output: true
     order:
       - SAPS 145th Anniversary Events & Updates.md
-      - School Philosophy.md
+      - School Vision, Mission, Motto and Values.md
       - The Lasallian Family.md
       - School Rules.md
       - School Information.md
