{"message":"Update file: collection.yml","userId":"57084","fileName":"collection.yml"}

--- a/_the-anthonian-experience/collection.yml
+++ b/_the-anthonian-experience/collection.yml
@@ -12,7 +12,7 @@ collections:
       - Curriculum@SAPS/Mathematics.md
       - Curriculum@SAPS/Mother Tongue.md
       - Curriculum@SAPS/Physical and Sports Education.md
-      - Curriculum@SAPS/Pupils Discipline & Leadership.md
+      - Curriculum@SAPS/Student Discipline.md
       - Curriculum@SAPS/Science.md
       - Curriculum@SAPS/Student Development.md
       - CCA@SAPS/.keep
