{"message":"Update file: collection.yml","userId":"57084","fileName":"collection.yml"}

--- a/_the-anthonian-experience/collection.yml
+++ b/_the-anthonian-experience/collection.yml
@@ -13,17 +13,17 @@ collections:
       - CCA@SAPS/CCA Schedule.md
       - CCA@SAPS/CCA Policy.md
       - CCA@SAPS/Direct School Admission DSA Secondary.md
-      - Curriculum@SAPS/.keep
-      - Curriculum@SAPS/English.md
-      - Curriculum@SAPS/Mathematics.md
-      - Curriculum@SAPS/Science.md
-      - Curriculum@SAPS/Mother Tongue.md
-      - Curriculum@SAPS/Character and Citizenship Education.md
-      - Curriculum@SAPS/Physical and Sports Education.md
-      - Curriculum@SAPS/Aesthetics.md
-      - Curriculum@SAPS/Education Technology.md
-      - Curriculum@SAPS/Environmental Education.md
-      - Curriculum@SAPS/Student Discipline.md
-      - Curriculum@SAPS/Student Leadership.md
-      - Curriculum@SAPS/Student Development.md
+      - CURRICULUM@SAPS/.keep
+      - CURRICULUM@SAPS/English.md
+      - CURRICULUM@SAPS/Mathematics.md
+      - CURRICULUM@SAPS/Science.md
+      - CURRICULUM@SAPS/Mother Tongue.md
+      - CURRICULUM@SAPS/Character and Citizenship Education.md
+      - CURRICULUM@SAPS/Physical and Sports Education.md
+      - CURRICULUM@SAPS/Aesthetics.md
+      - CURRICULUM@SAPS/Education Technology.md
+      - CURRICULUM@SAPS/Environmental Education.md
+      - CURRICULUM@SAPS/Student Discipline.md
+      - CURRICULUM@SAPS/Student Leadership.md
+      - CURRICULUM@SAPS/Student Development.md
       - LLP@SAPS.md
