--- a/_clubs-and-societies/collection.yml
+++ b/_clubs-and-societies/collection.yml
@@ -2,6 +2,7 @@ collections:
   clubs-and-societies:
     output: true
     order:
+      - Visual Arts.md
       - English Club.md
       - Environmental Science.md
       - InfoComm Club.md
