{"message":"Update file: collection.yml","userId":"57084","fileName":"collection.yml"}

--- a/_visual-and-performing-arts/collection.yml
+++ b/_visual-and-performing-arts/collection.yml
@@ -2,6 +2,7 @@ collections:
   visual-and-performing-arts:
     output: true
     order:
+      - Visual Arts.md
       - Brass Band.md
       - Chinese Dance.md
       - Choir.md
